--- a/raft/Cargo.toml
+++ b/raft/Cargo.toml
@@ -8,3 +8,10 @@ edition = "2018"
 
 [dependencies]
 rand = "0.8.3"
+tonic = "0.4"
+prost = "0.7"
+tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
+futures="0.3.12"
+
+[build-dependencies]
+tonic-build = "0.4"
