--- a/raft/Cargo.toml
+++ b/raft/Cargo.toml
@@ -14,6 +14,7 @@ tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
 futures="0.3.12"
 chrono="0.4.19"
 rayon="1.5.0"
+crc = "2.0.0-rc.1"
 
 [build-dependencies]
 tonic-build = "0.4"
