--- a/raft/Cargo.toml
+++ b/raft/Cargo.toml
@@ -17,6 +17,8 @@ rayon="1.5.0"
 crc = "2.0.0-rc.1"
 walkdir = "2"
 sled="0.34.6"
+bincode = "1.3.3"
+serde = {version = "1.0.126", features = ["derive"]}
 
 [build-dependencies]
 tonic-build = "0.4"
