--- a/raft/Cargo.toml
+++ b/raft/Cargo.toml
@@ -19,6 +19,7 @@ walkdir = "2"
 sled="0.34.6"
 bincode = "1.3.3"
 serde = {version = "1.0.126", features = ["derive"]}
+parking_lot="0.11.1"
 
 [build-dependencies]
 tonic-build = "0.4"
