--- a/raft/Cargo.toml
+++ b/raft/Cargo.toml
@@ -20,6 +20,8 @@ sled="0.34.6"
 bincode = "1.3.3"
 serde = {version = "1.0.126", features = ["derive"]}
 parking_lot="0.11.1"
+log = "0.4"
+log4rs = "1.0.0"
 
 [build-dependencies]
 tonic-build = "0.4"
